--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #909090;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.App .app-title {
+  font-size: 50px;
+}
+
+.App .app-timer {
+  font-size: 35px;
+  margin-top: 0;
+}
+
+.App .buttons button {
+  background: grey;
+  outline: none;
+  border-radius: 5px;
+  padding: 5px;
+  cursor: pointer;
+  margin-right: 10px;
+  min-width: 100px;
+}
+
+.App .buttons button:last-child {
+  margin-right: 0;
+}
+
+.App .buttons button:hover {
+  background: lightgrey;
 }
